--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 class="tittle-calc">Калькулятор</h1>
     <div class="main-case">
         <input type="number" class="inputOne" value="1">
         <input type="number" class="inputTwo" value="1">
@@ -22,8 +23,8 @@
         
     </div>
     <div class="second-case">
-        <h2 class="tittle-res">Ответ :</h2>
-        <h2 class="result">3</h2>
+        <h2 class="tittle-res">Ответ : </h2>
+        <h2 class="result"></h2>
     </div>
 </body>
 </html>
